# trade

./: .gitignore  README.md  pyproject.toml
docs/: reference-notes.md
docs/review/: 2026-06-14-design-redteam-review.md  2026-06-14-m0-verification.md  2026-06-14-m1-verification.md  2026-06-14-m1.5-verification.md  2026-06-14-m1b-m2-verification.md  2026-06-14-m3-proposition-verdict.md  2026-06-14-m5a-verification.md  2026-06-14-m5b-verification.md  2026-06-14-m6-verification.md  2026-06-14-v04-redteam-4dim-review.md  2026-06-16-api-bridge-browser-smoke.md  2026-06-16-qmt-live-gate.md  2026-06-16-trading-rule-source-audit.md  m1a-report-2026-06-14.md
docs/specs/: 2026-06-14-a-stock-quant-trading-system-design.md
probes/: calendar_holidays.py  conftest.py  data_sources.py  duckdb_perf.py  full_gate.py  network_gate.py  nlp_sentiment.py  project_gate.py  qmt_live.py  report.py  sqlite_write.py
probes/dsl/: interpreter.py  operators.py
quant/: clock.py  config.py  events.py  logging_setup.py  secrets.py
quant/actor/: ai_induct.py  gate.py  ml_imitate.py  model.py  sample_lib.py  self_audit.py  stat_profile.py
quant/api/: __init__.py  app.py  runtime_state.py  sample_data.py
quant/backtest/: attribution.py  engine.py  friction.py  sim_broker.py
quant/data/: duckdb_handoff.py  duckdb_store.py  instrument.py  instrument_provider.py  instrument_seed.yaml  models.py  pit.py  repository.py  schema.py  sqlite_store.py
quant/dsl/: interpreter.py  (+2 more)
tasks/: HANDOFF.md  todo.md
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+247 files in other folders)
