[project]
name = "trade"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "duckdb>=0.10",
    "exchange_calendars>=4.5",
    "akshare>=1.12",
    "baostock>=0.8.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
    "cvxpy>=1.4",
    "openai>=1.0",
]

[project.optional-dependencies]
nlp = ["torch>=2.2", "transformers>=4.40"]

[tool.setuptools.packages.find]
include = ["quant*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks probes as slow (deselect with '-m \"not slow\"')",
    "network: marks probes requiring internet (deselect with '-m \"not network\"')",
]
testpaths = ["tests/probes", "tests/quant"]
